syntax = "proto3";

package plan92.v1;

option go_package = "github.com/accretional/plan92/gen/plan92/v1;plan92v1";

// Plan92FS is a simple filesystem service providing file I/O operations over gRPC.
// Files are always opened with read/write access. The service runs with root access
// to the underlying filesystem in a sandboxed environment.
service Plan92FS {
  // Streamed file operations
  rpc Open(URI) returns (OpenFileDescriptor);
  rpc Read(OpenFileDescriptor) returns (stream BytesValue);
  rpc Write(stream WriteRequest) returns (WriteResponse);
  rpc Close(OpenFileDescriptor) returns (CloseResponse);

  // Non-streamed operations for small files
  rpc ReadAll(OpenFileDescriptor) returns (BytesValue);
  rpc WriteAll(WriteAllRequest) returns (WriteResponse);

  // Direct URI-based operations (open, read/write, close in one call)
  rpc ReadDirect(URI) returns (BytesValue);
  rpc WriteDirect(WriteDirectRequest) returns (WriteResponse);
}

// ============================================================================
// Core Message Types
// ============================================================================

// URI represents a file path
message URI {
  string path = 1;
}

// OpenFileDescriptor represents an open file
message OpenFileDescriptor {
  int32 fd = 1;
}

// BytesValue wraps a byte array for responses
message BytesValue {
  bytes data = 1;
}

// ============================================================================
// Write Operations
// ============================================================================

// WriteRequest is streamed to write data to an open file descriptor.
// First message should contain fd, subsequent messages contain data chunks.
message WriteRequest {
  oneof data {
    int32 fd = 1;
    bytes chunk = 2;
  }
}

// WriteResponse indicates write completion with byte count and optional error
message WriteResponse {
  int32 count = 1;
  optional int32 errno = 2;
}

// WriteAllRequest writes entire content to an open file descriptor
message WriteAllRequest {
  int32 fd = 1;
  bytes data = 2;
}

// WriteDirectRequest writes data to a file by path (open, write, close)
message WriteDirectRequest {
  string path = 1;
  bytes data = 2;
}

// ============================================================================
// Close Operations
// ============================================================================

// CloseResponse indicates close completion with optional error
message CloseResponse {
  optional int32 errno = 1;
}

// ============================================================================
// Error Codes (errno values)
// ============================================================================

// Errno maps to standard Unix error codes
enum Errno {
  ERRNO_UNSPECIFIED = 0;
  ERRNO_ENOENT = 2;      // No such file or directory
  ERRNO_EIO = 5;         // I/O error
  ERRNO_EBADF = 9;       // Bad file descriptor
  ERRNO_EEXIST = 17;     // File exists
  ERRNO_ENOTDIR = 20;    // Not a directory
  ERRNO_EISDIR = 21;     // Is a directory
  ERRNO_EINVAL = 22;     // Invalid argument
  ERRNO_EFBIG = 27;      // File too large
  ERRNO_ENOSPC = 28;     // No space left on device
}
